[gd_scene load_steps=35 format=2]

[ext_resource path="res://fonts/Mars_Needs_Cunnilingus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/battle/chara_lv1.png" type="Texture" id=2]
[ext_resource path="res://sprites/battle/fight_button.png" type="Texture" id=3]
[ext_resource path="res://sprites/battle/act_button.png" type="Texture" id=4]
[ext_resource path="res://sprites/battle/item_button.png" type="Texture" id=5]
[ext_resource path="res://scenes/battle_gui.gd" type="Script" id=6]
[ext_resource path="res://sprites/battle/healthbar_under.png" type="Texture" id=7]
[ext_resource path="res://sprites/battle/healthbar_progress.png" type="Texture" id=8]
[ext_resource path="res://sprites/battle/hp_label.png" type="Texture" id=9]
[ext_resource path="res://fonts/8bit_operator.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://custom_classes/heal_item.gd" type="Script" id=11]
[ext_resource path="res://custom_classes/dialogue_label.gd" type="Script" id=12]
[ext_resource path="res://sprites/battle/dialogue_cloud.png" type="Texture" id=13]
[ext_resource path="res://fonts/determination.ttf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Resource" id=59]
script = ExtResource( 11 )
heal = 20
short_name = "ITEM_PIE"
description = "ITEM_PIE_DESC"

[sub_resource type="Resource" id=60]
script = ExtResource( 11 )
heal = 5
short_name = "ITEM_JUNK"
description = "ITEM_JUNK_DESC"

[sub_resource type="Resource" id=61]
script = ExtResource( 11 )
heal = 5
short_name = "ITEM_DONUT"
description = "ITEM_DONUT_DESC"

[sub_resource type="Resource" id=62]
script = ExtResource( 11 )
heal = 5
short_name = "ITEM_DOG"
description = "ITEM_DOG_DESC"

[sub_resource type="Resource" id=63]
script = ExtResource( 11 )
heal = 5
short_name = "ITEM_CHISPS"
description = "ITEM_CHISPS_DESC"

[sub_resource type="Resource" id=64]
script = ExtResource( 11 )
heal = 5
short_name = "ITEM_SEA"
description = "ITEM_SEA_DESC"

[sub_resource type="DynamicFont" id=65]
font_data = ExtResource( 14 )

[sub_resource type="Theme" id=66]
default_font = SubResource( 65 )
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 102, 39 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 0, 39, 102, 39 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 47 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 102, 39 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 0, 39, 102, 39 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 50 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 102, 39 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 5 )
region = Rect2( 0, 39, 102, 39 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=58]
size = 24
font_data = ExtResource( 1 )

[node name="battle_gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 6 )
healing_items = [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 60 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 63 ) ]
enemy_dialogue_theme = SubResource( 66 )

[node name="chara_lv1" type="Sprite" parent="."]
position = Vector2( 40, 403 )
texture = ExtResource( 2 )
centered = false

[node name="main_buttons" type="Node2D" parent="."]

[node name="fight" type="AnimatedSprite" parent="main_buttons"]
position = Vector2( 33, 433 )
frames = SubResource( 53 )
centered = false

[node name="act" type="AnimatedSprite" parent="main_buttons"]
position = Vector2( 185, 433 )
frames = SubResource( 55 )
centered = false

[node name="item" type="AnimatedSprite" parent="main_buttons"]
position = Vector2( 344, 433 )
frames = SubResource( 57 )
centered = false

[node name="GridContainer" type="GridContainer" parent="main_buttons/item"]
visible = false
margin_left = -270.0
margin_top = -180.0
margin_right = 250.0
margin_bottom = -60.0
custom_constants/vseparation = 0
columns = 2

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 34.0
margin_top = 252.0
margin_right = 605.0
margin_bottom = 388.0
border_color = Color( 1, 1, 1, 1 )
border_width = 5.0

[node name="HpLabel" type="Sprite" parent="."]
position = Vector2( 244, 405 )
texture = ExtResource( 9 )
centered = false

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 275.0
margin_top = 400.0
margin_right = 337.0
margin_bottom = 421.0
max_value = 20.0
value = 10.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )

[node name="hp" type="Label" parent="."]
margin_left = 350.0
margin_top = 400.0
margin_right = 421.0
margin_bottom = 424.0
custom_fonts/font = SubResource( 58 )
text = "10/20"

[node name="DialogueCloud" type="Sprite" parent="."]
position = Vector2( 400, 50 )
texture = ExtResource( 13 )
centered = false

[node name="dial" type="RichTextLabel" parent="."]
margin_left = 39.0
margin_top = 255.0
margin_right = 599.0
margin_bottom = 385.0
text = "* Make peace, not war pls"
fit_content_height = true
scroll_active = false
script = ExtResource( 12 )

[connection signal="dialogue_custom_event" from="dial" to="." method="_on_DialogueLabel_dialogue_custom_event"]
[connection signal="dialogue_ended" from="dial" to="." method="_on_DialogueLabel_dialogue_ended"]
